--- a/dl/proftpd.conf
+++ b/dl/proftpd.conf
@@ -1,4 +1,6 @@
 #
+# This configuration is edited by AH26, it's not the official configuration
+#
 # /etc/proftpd/proftpd.conf -- This is a basic ProFTPD configuration file.
 # To really apply changes, reload proftpd after modifications, if
 # it runs in daemon mode. It is not required in inetd/xinetd mode.
